--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 TODO:
 
 Make author link searches work correctly
-Make a way to search comments by author and the like
+Make a way to search comments by author and see post names
