Registration controllers attached to UID, gradyear.

--- a/TODO
+++ b/TODO
@@ -4,3 +4,12 @@ Make blog login
 Make blog editor 
 Make author link searches work correctly
 Make a way to search comments by author and see post names
+
+
+
+Login fields
+Username
+Real name
+Password
+Email
+http://stackoverflow.com/questions/14419651/filters-on-ng-model-in-an-input/14425022#14425022
