Moved registration directives to a separate file and made necessary requirements, settings now kind of has an update form, currently hooking up the fields to models. Navbar settings now links to settings page.

--- a/TODO
+++ b/TODO
@@ -13,3 +13,13 @@ Real name
 Password
 Email
 http://stackoverflow.com/questions/14419651/filters-on-ng-model-in-an-input/14425022#14425022
+
+
+
+Settings page
+Mission critical
+* Password change
+* See current membership status
+* Links to membership
+* Make checks for username validity
+* Checks for password validity
