--- a/TODO
+++ b/TODO
@@ -26,3 +26,5 @@ Mission critical
 * Make registration alert when fields are not completed
 * CART
 * Checkout interfaces
+* Paypal info page
+* Order history on settings
