--- a/TODO
+++ b/TODO
@@ -28,3 +28,5 @@ Mission critical
 * Checkout interfaces
 * Paypal info page
 * Order history on settings
+* Cart removal
+* Item put in cart confirmation
