Added something to "todo." Next is to work on mysql implementation of things.

--- a/TODO
+++ b/TODO
@@ -34,3 +34,5 @@ Mission critical
 * Item put in cart confirmation
 * Use handlebars
 * Make graduation year more dynamic
+
+Ticketing will be off eventbrite
