Lots of changes! 1. Carosel (sic) is prettier, copying the image to a div and bluring that div, providing a background for arbitrary image sizes. 2. Todo page updated 3. About controller fixed so teams actually displays things dynamically 4. Some page info for the fall lan party is up! 5. CSS changes to support the previous carousel changes 6. Image for fall lan added.

--- a/TODO
+++ b/TODO
@@ -36,3 +36,14 @@ Mission critical
 * Make graduation year more dynamic
 
 Ticketing will be off eventbrite
+
+
+Current things
+* Event pages
+	* Maybe off the about format
+* Email reset
+* Mechanism for making people a member 
+* Dedicated Pages explaining the benefits of membership
+	* Tespa membership as well
+* Event page 
+	* With social media links, event brite tickets
