Beginning to create admin controls for adding membership to users

--- a/TODO
+++ b/TODO
@@ -38,12 +38,12 @@ Mission critical
 Ticketing will be off eventbrite
 
 
-Current things
-* Event pages
-	* Maybe off the about format
-* Email reset
+Current things to do
 * Mechanism for making people a member 
 * Dedicated Pages explaining the benefits of membership
 	* Tespa membership as well
-* Event page 
-	* With social media links, event brite tickets
+* Email reset
+
+Done: 
+* Event pages
+	* Maybe off the about format
