More explicit TODO statements. Minor changes to big picture CSS to work with footer. Minor footer formatting. Header added events links. Next is to work on a dynamic events page or to make sections for about pages.
I have gotten nothing productive done in like 4 hours

--- a/TODO
+++ b/TODO
@@ -1,11 +1,31 @@
 TODO:
 
-Make blog login
-Make blog editor 
-Make author link searches work correctly
-Make a way to search comments by author and see post names
-Link up username shenanigans
+Long term:
 
+Blog (Beyond long term)
+	Make blog login
+	Make blog editor 
+	Make author link searches work
+	Make a way to search comments by author and see post names
+	Link up username shenanigans
+
+Tournament management
+	Whoa there long term
+
+Medium Term: 
+
+User info
+	Email
+		Set up email API
+		Set up password reset
+	Settings
+		Config
+			Set up user preference modification
+		Membership
+			Set up user viewership for memberships
+
+Short term: 
+	Make all other information sites
 
 
 Login fields
